// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gem2sResponse Starts a QC run when gem2s finishes 1`] = `
Array [
  Array [
    "06d50e28-cc96-2624-900c-e0e9a0995598",
    Object {
      "processing_config": Object {
        "cellSizeDistribution": Object {
          "f87892f0-3403-4ba9-b871-c366e3fa855e": Object {
            "auto": true,
            "defaultFilterSettings": Object {
              "binStep": 200,
              "minCellSize": 1044,
            },
            "enabled": false,
            "filterSettings": Object {
              "binStep": 200,
              "minCellSize": 1044,
            },
          },
        },
        "classifier": Object {
          "f87892f0-3403-4ba9-b871-c366e3fa855e": Object {
            "auto": true,
            "defaultFilterSettings": Object {
              "FDR": 0.01,
            },
            "enabled": false,
            "filterSettings": Object {
              "FDR": 0.01,
            },
            "prefiltered": true,
          },
        },
        "configureEmbedding": Object {
          "clusteringSettings": Object {
            "method": "louvain",
            "methodSettings": Object {
              "louvain": Object {
                "resolution": 0.8,
              },
            },
          },
          "embeddingSettings": Object {
            "method": "umap",
            "methodSettings": Object {
              "tsne": Object {
                "learningRate": 200,
                "perplexity": 30,
              },
              "umap": Object {
                "distanceMetric": "cosine",
                "minimumDistance": 0.3,
              },
            },
          },
        },
        "dataIntegration": Object {
          "dataIntegration": Object {
            "method": "harmony",
            "methodSettings": Object {
              "fastmnn": Object {
                "normalisation": "logNormalize",
                "numGenes": 2000,
              },
              "harmony": Object {
                "normalisation": "logNormalize",
                "numGenes": 2000,
              },
              "seuratv4": Object {
                "normalisation": "logNormalize",
                "numGenes": 2000,
              },
              "unisample": Object {
                "normalisation": "logNormalize",
                "numGenes": 2000,
              },
            },
          },
          "dimensionalityReduction": Object {
            "excludeGeneCategories": Array [],
            "method": "rpca",
            "numPCs": 30,
          },
        },
        "doubletScores": Object {
          "f87892f0-3403-4ba9-b871-c366e3fa855e": Object {
            "auto": true,
            "defaultFilterSettings": Object {
              "binStep": 0.02,
              "probabilityThreshold": 0.6569474,
            },
            "enabled": true,
            "filterSettings": Object {
              "binStep": 0.02,
              "probabilityThreshold": 0.6569474,
            },
          },
        },
        "mitochondrialContent": Object {
          "f87892f0-3403-4ba9-b871-c366e3fa855e": Object {
            "auto": true,
            "defaultFilterSettings": Object {
              "method": "absoluteThreshold",
              "methodSettings": Object {
                "absoluteThreshold": Object {
                  "binStep": 0.3,
                  "maxFraction": 0.07181329,
                },
              },
            },
            "enabled": true,
            "filterSettings": Object {
              "method": "absoluteThreshold",
              "methodSettings": Object {
                "absoluteThreshold": Object {
                  "binStep": 0.3,
                  "maxFraction": 0.07181329,
                },
              },
            },
          },
        },
        "numGenesVsNumUmis": Object {
          "f87892f0-3403-4ba9-b871-c366e3fa855e": Object {
            "auto": true,
            "defaultFilterSettings": Object {
              "regressionType": "linear",
              "regressionTypeSettings": Object {
                "linear": Object {
                  "p.level": 0.001,
                },
                "spline": Object {
                  "p.level": 0.001,
                },
              },
            },
            "enabled": true,
            "filterSettings": Object {
              "regressionType": "linear",
              "regressionTypeSettings": Object {
                "linear": Object {
                  "p.level": 0.001,
                },
                "spline": Object {
                  "p.level": 0.001,
                },
              },
            },
          },
        },
      },
    },
  ],
]
`;

exports[`gem2sResponse Starts a QC run when gem2s finishes 2`] = `
Array [
  Array [
    "06d50e28-cc96-2624-900c-e0e9a0995598",
    Array [],
    "Bearer someHugeHash",
    "a6d49c90-74f0-4c1e-aa8f-673312b6eb7d",
  ],
]
`;

exports[`gem2sResponse works correctly 1`] = `
Array [
  "ExperimentUpdates-mockExperimentId",
  Object {
    "experimentId": "mockExperimentId",
    "input": Object {},
    "response": Object {},
    "status": Object {
      "status": Object {
        "gem2s": Object {
          "completedSteps": Array [
            "DownloadGem",
          ],
          "error": false,
          "paramsHash": "mockParamsHash",
          "startDate": "2022-05-10T16:30:16.268Z",
          "status": "RUNNING",
          "stopDate": null,
        },
      },
    },
    "type": "gem2s",
  },
]
`;

exports[`startGem2sPipeline works correctly 1`] = `
Array [
  Object {
    "experiment_id": "mockExperimentId",
    "pipeline_type": "gem2s",
  },
  Object {
    "execution_arn": "mockExecutionArn",
    "params_hash": "mockParamsHash",
    "state_machine_arn": "mockStateMachineArn",
  },
]
`;

exports[`startGem2sPipeline works correctly 2`] = `
Array [
  Object {
    "experiment_id": "mockExperimentId",
    "pipeline_type": "qc",
  },
]
`;

exports[`startGem2sPipeline works correctly 3`] = `
Array [
  "mockExperimentId",
  Object {
    "authJWT": "mockAuthJWT",
    "experimentName": "asdsadsada",
    "input": Object {
      "type": "10x",
    },
    "metadata": Object {
      "Track_1": Array [
        "N.A.",
      ],
    },
    "organism": null,
    "projectId": "mockExperimentId",
    "sampleIds": Array [
      "fc68aefc-c3ca-467f-8589-f1dbaaac1c1e",
    ],
    "sampleNames": Array [
      "WT1",
    ],
    "sampleOptions": Object {
      "fc68aefc-c3ca-467f-8589-f1dbaaac1c1e": Object {},
    },
    "sampleS3Paths": Object {
      "fc68aefc-c3ca-467f-8589-f1dbaaac1c1e": Object {
        "barcodes10x": "37d9e601-9278-437c-a776-40fe94680833",
        "features10x": "1ee00087-e98a-4390-a3cb-392a3f6d09d8",
        "matrix10x": "68f74995-3689-401a-90e0-145e08049cd5",
      },
    },
  },
]
`;
